@@ -33,13 +33,14 @@ java_sources = \
 java_BUILT = \
   ParsedXMLHandler.java \
   ParsedXMLHandlerByte.java \
+  QName.java \
   XMLParser.java \
   XMLParserByte.java
 
 BUILT_SOURCES = $(java_BUILT)
 java_Java= $(java_BUILT) $(java_sources)
 EXTRA_DIST = $(java_sources) \
-  XMLParser.java.in ParsedXMLHandler.java.in
+  XMLParser.java.in ParsedXMLHandler.java.in QName.java.in
 
 DONT_EDIT_SUBS = -e '1i\' -e '// DO NOT EDIT!  -*- buffer-read-only: t -*-' 
 FROM_XMLParser = $(DONT_EDIT_SUBS) \
@@ -54,6 +55,18 @@ CHAR_SUBS = -e 's|@CHAR@|char|g' \
   -e 's|@XMLParser@|XMLParser|g'  -e 's|@ParsedXMLHandler@|ParsedXMLHandler|g'\
   -e '/@if CHAR is byte@/,/@endif CHAR is byte@/d' \
   -e '/@*if CHAR is char@/d'
+
+if WITH_JAVA_REFERENCES
+SED_REFERENCES_SUBS = $(DONT_EDIT_SUBS) \
+  -e 's|@QTableElement@|WeakReference|g' \
+  -e '/@if WITHOUT REFERENCES@/,/@endif WITHOUT REFERENCES@/d' \
+  -e '/@*if WITH REFERENCES@/d'
+else
+SED_REFERENCES_SUBS = $(DONT_EDIT_SUBS) \
+  -e 's|@QTableElement@|QName|g' \
+  -e '/@if WITH REFERENCES@/,/@endif WITH REFERENCES@/d' \
+  -e '/@*if WITHOUT REFERENCES@/d'
+endif
 
 XMLParserByte.java:  $(srcdir)/XMLParser.java.in
 	sed $(BYTE_SUBS) $(FROM_XMLParser) \
@@ -70,6 +83,11 @@ ParsedXMLHandlerByte.java:  $(srcdir)/ParsedXMLHandler.java.in
 ParsedXMLHandler.java:  $(srcdir)/ParsedXMLHandler.java.in
 	sed $(CHAR_SUBS) $(FROM_ParsedXMLHandler) \
 	  <$(srcdir)/ParsedXMLHandler.java.in >ParsedXMLHandler.java 
+
+QName.java:  $(srcdir)/QName.java.in
+	sed $(SED_REFERENCES_SUBS) \
+	  -e '1s|//.*-Java-.*|// This file is automatically generated from QName.java.in.|' \
+	  <$(srcdir)/QName.java.in >QName.java
 
 PACKAGE_FNAME = gnu-xml
 GCJ_INPUTS =  $(java_Java)
