@@ -1,3 +1,15 @@
+2001-10-17  Per Bothner  <per@bothner.com>
+
+	* QName.java:  Moved to QName.java.in.
+	* QName.java.in:  New file.  Add code to using references to reclaim
+	unused QNames.  Make it conditional on --with-java-references.
+	* Makefile.am:  Update accordingly.
+
+	* QName.java:  Make it implement Externalizable.
+	(writeExternal, readExternal, readResolve):  New methods.
+
+	* QName.java (getNamespaceURI, getLocalName):  Make final.
+
 2001-09-24  Per Bothner  <per@bothner.com>
 
 	* QName.java:  New class.
